--- a/about.html
+++ b/about.html
@@ -29,17 +29,22 @@
             </div>
 
             <ul class="side-nav__ul">
-                <li class="side-nav__li p-text"><a href="./"></a>About</li>
-                <li class="side-nav__li p-text">Host a session</li>
+                <li class="side-nav__li p-text"><a href="./about.html"></a>About</li>
+                <li class="side-nav__li p-text"><a href="./hosting.html">Host a session</a></li>
             </ul>
 
             <div class="side-nav__login-container">
                 <a href="./login.html"><button class="side-nav__login-btn p-text">Login</button></a>
                 <a href="./sign-up.html"><button class="side-nav__sign-up-btn p-text">Sign up</button></a>
             </div>
+
+            <div class="side-nav__profile-div hide">
+                <a href="./profile.html"><img class="side-nav__profile-div-img" src="./images/rubyPic.jpeg" alt="Ruby's portrait"></a>
+                <p class="p-text side-nav__name"><a href="./profile.html">Ruby Doyle</p></a>
+            </div>
         </nav>
 
-        <div class="home-page">
+        <div class="right-page">
             <section class="about">
                 <h1 class="about__h1">About</h1>
 
@@ -49,7 +54,7 @@
                 We’re located in New Zealand’s very own creative capital, Wellington!
                 </p>
 
-                <button class="about__btn p-text">Host a session</button>
+                <button class="about__btn p-text"><a href="./hosting.html">Host a session</a></button>
             </section>
 
             <!-- How it works section -->
