--- a/index.html
+++ b/index.html
@@ -25,29 +25,95 @@
         <nav class="side-nav">
             <div class="side-nav__logo-div">
                 <img class="side-nav__img" src="./images/hobbi-logo.svg" alt="Hobbi logo">
-                <h1 class="hobbi-logo">Hobbi</h1>
+                <h1 class="hobbi-logo"><a href="./index.html">Hobbi</a></h1>
             </div>
 
             <ul class="side-nav__ul">
                 <li class="side-nav__li p-text"><a href="./about.html">About</a></li>
-                <li class="side-nav__li p-text">Host a session</li>
+                <li class="side-nav__li p-text"><a href="./hosting.html">Host a session</a></li>
             </ul>
 
             <div class="side-nav__login-container">
                 <a href="./login.html"><button class="side-nav__login-btn p-text">Login</button></a>
                 <a href="./sign-up.html"><button class="side-nav__sign-up-btn p-text">Sign up</button></a>
             </div>
+
+            <div class="side-nav__profile-div hide">
+                <a href="./profile.html"><img class="side-nav__profile-div-img" src="./images/rubyPic.jpeg" alt="Ruby's portrait"></a>
+                <p class="p-text side-nav__name"><a href="./profile.html">Ruby Doyle</p></a>
+            </div>
         </nav>
 
-        <div class="home-page">
-            <button class="session-host-btn p-text">Host a session</button>
+        <div class="right-page">
+            <div class="icon-container">
+                <div class="icon-pattern">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/golf.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/microphone.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/puzzle.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/play-card.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/bulb.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/paper-plane.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/music.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/bulb.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/flag-flat.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/school.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/bolt.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/brush.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/camera.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/tennis-ball.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/tool.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/leaf.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/puzzle.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/bolt.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/play-card.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/scissors.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/click.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/tennis-ball.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/faded-bolt.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/faded-school.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/faded-flat-flag.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/faded-bulb.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/blank-icon.svg" alt="">
+                    <img class="icon-pattern__img" src="./images/faded-music.svg" alt="">
+                </div>
 
-            <!-- landing section -->
-            <div class="landing-section">
-                <p class="landing-section__p">Learn hobbies
-                    <br>
-                    Hands on, in person</p>
+                 <!-- landing section -->
+                <div class="landing-section">
+                    <p class="landing-section__h1">Learn hobbies
+                        <br>
+                        Hands on, in person</h1>
+                </div>
             </div>
+
+            <button class="session-host-btn p-text"><a href="./hosting.html">Host a session</a></button>
+
+
 
             <!-- How it works section -->
             <section class="how-it-works">
@@ -104,7 +170,7 @@
             <div class="border-div"></div>
 
             <footer class="footer">
-                <h2 class="footer__h2">Contact 🚀</h2>
+                <h2 class="footer__h2">Contact</h2>
                 <p class="p-text">hobbi@gmail.com</p>
             </footer>
         </div>
