updated draft, listing css issues

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
             <section class="available-hobbies">
                 <h2 class="h2-text">Available hobbies</h2>
                 <div class="available-hobbies__container">
-                    <div class="available-hobbies__div">
+                    <a href="./listing.html"><div class="available-hobbies__div">
                         <img class="available-hobbies__img" src="./images/soap-making.png" alt="person hand-making soap">
                         <div class="available-hobbies__text-div">
                             <p class="p-text">Soap making</p>
                             <p class="light-p-text">Wellington</p>
                         </div>
-                    </div>
+                    </div></a>
 
                     <div class="available-hobbies__div">
                         <img class="available-hobbies__img" src="./images/photography.png" alt="camera">
