--- a/apply.html
+++ b/apply.html
@@ -31,27 +31,29 @@
 
             <div class="application__div">
                 <div class="application__info-div">
-                    <input class="application__input application__name p-text" type="text" placeholder="Full name...">
-                    <input class="application__input application__age p-text" type="text" placeholder="Age...">
+                    <input class="application__input application__name p-text" id="inputName" type="text" placeholder="Full name...">
+                    <input class="application__input application__age p-text" id="inputAge" type="text" placeholder="Age...">
                 </div>
                 
-                <input class="application__input application__email p-text" type="text" placeholder="Email address...">
+                <input class="application__input application__email p-text" id="inputEmail" type="text" placeholder="Email address...">
 
                 <div class="application__info-div">
-                    <input class="application__input application__contact-number p-text" type="text" placeholder="Contact number...">
-                    <input class="application__input application__city p-text" type="text" placeholder="City...">
+                    <input class="application__input application__contact-number p-text" id="inputContactNumber" type="text" placeholder="Contact number...">
+                    <input class="application__input application__city p-text" id="inputCity" type="text" placeholder="City...">
                 </div>
                 
-                <input class="application__input application__description p-text" type="text" placeholder="Hobby you're going to teach & your experience...">
+                <input class="application__input application__description p-text" id="inputDescription" type="text" placeholder="Hobby you're going to teach & your experience...">
             </div>
 
-            <button class="application__btn">Submit</button>
+            <button class="application__btn" onclick="applySubmit()">Submit</button>
         </section>
 
         <!-- jquery script -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+
         <!-- local javascript -->
         <script src="./script.js"></script>
+        <script src="./apply.js"></script>
     </body>
 </html>
