--- a/hosting.html
+++ b/hosting.html
@@ -46,9 +46,9 @@
 
         <div class="right-page">
             <section class="hosting">
-                <h1 class="h2-text">Host a session</h1>
+                <h1 class="hosting__h1">Host a session</h1>
 
-                <p class="p-text">Three things you need to be a Hobbi host:</p>
+                <p class="hosting__p">Three things you need to be a Hobbi host:</p>
 
                 <form class="hosting__form" action="#">
                     <div class="hosting__div">
@@ -78,17 +78,14 @@
 
                 <button class="hosting__btn"><a href="./apply.html">Apply here</a></button>
 
-                <p class="hosting__contact p-text">Not sure if you’re a good fit? 
+                <p class="hosting__contact">Not sure if you’re a good fit? 
                     Get in contact and we can talk it through with you!
                     <br>Email us at hobbi@gmail.com</p>
             </section>
             
             <div class="border-div"></div>
 
-            <footer class="footer">
-                <h2 class="footer__h2">Contact</h2>
-                <p class="p-text">hobbi@gmail.com</p>
-            </footer>
+            <footer class="footer" id="footer"></footer>
         </div>
 
         <!-- jquery script -->
